test/tests/bad/inexhaustive-pats.carth
;; InexhaustivePats

(defun foo (case [True] 0))
